# fp-course

./: .gitmodules  README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/src/: Lib.hs  Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs
hw1/: README.md  hw1.cabal
hw1-second-chance/: README.md  hw1-second-chance.cabal
hw1-second-chance/src/: Block6.hs
hw1-second-chance/test/: AllTests.hs  Main.hs
hw1/src/Block1/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block2/: Task2.hs
hw1/src/Block3/: Task1.hs  Task2.hs
hw1/src/Block4/: Task1.hs  Task2.hs  Task3.hs
hw1/src/Block5/: Task1.hs
hw1/test/: AllTests.hs  Main.hs
hw2/: README.md  hw2.cabal
hw3/: README.md  hw3.cabal
hw4/: README.md  hw4.cabal
