name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/komour/fp-course/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Andrey Komarov
maintainer:          komaroff404@gmail.com
copyright:           2020 Andrey Komarov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1.Task1 
                     , Block1.Task2 
                     , Block1.Task3 
                     , Block2.Task2 
                     , Block3.Task1 
                     , Block3.Task2 
                     , Block4.Task1 
                     , Block4.Task2 
                     , Block4.Task3
                     , Block5.Task1
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 5
                     , hw1
                     , tasty
                     , tasty-hspec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  other-modules:       AllTests
  default-language:    Haskell2010